--- a/loginStyle.css
+++ b/loginStyle.css
@@ -35,3 +35,71 @@ input, button {
     margin-bottom: 20px;
     width: 100%;
 }
+
+#main {
+    margin-top: 1%;
+    padding-top: 2.5%;
+    border-top: 2px solid black;
+}
+
+#search {
+    width: 92%;
+    margin-left: 4%;
+    margin-right: 10%;
+}
+
+#searchbar {
+    border: 1px solid black;
+    margin-right: 10%;
+}
+
+#searchbutton {
+    width: 5%;
+}
+
+::placeholder{
+    color:  #38688a;
+    font-size: 125%;
+}
+
+#tickandsent {
+    margin-top: 2%;
+}
+
+#tickandsent > div {
+    height: 400px;
+    border: 1px solid black;
+}
+
+#tickers {
+    float: left;
+    width: 44%;
+    background-color: white;
+    margin-left: 4%;
+    overflow: auto;
+}
+
+.ticker {
+    background-color: gray !important;
+    position: absolute;
+}
+
+#sentiment{
+    float: right;
+    width: 44%;
+    background-color: white;
+    margin-right: 4%;
+}
+
+meter {
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+#meter {
+    border-bottom: 1px solid black;
+    height: 70px;
+    background-color: black;
+}
