login errors look better. No more alerts

--- a/loginStyle.css
+++ b/loginStyle.css
@@ -18,6 +18,10 @@ body {
     /* display: none; */
 }
 
+#login_error {
+    color: red;
+}
+
 
 .mainLoginDiv button:hover {
     background: #fff;
