--- a/loginStyle.css
+++ b/loginStyle.css
@@ -1,8 +1,16 @@
+html{
+    overflow-y: scroll;
+}
+
 body {
     background: #7BAFD4;
     padding: 0px;
     margin: 0px;
     font-size:18px;
+}
+
+button {
+    cursor: pointer;
 }
 
 .mainLoginDiv {
@@ -22,7 +30,6 @@ body {
     color: red;
 }
 
-
 .mainLoginDiv button:hover {
     background: #fff;
     color: #38688a;
@@ -30,8 +37,6 @@ body {
     cursor: pointer;
   }
   
-
-
 input, button {
     font-weight: 600;
     padding: 15px;
@@ -50,29 +55,63 @@ input, button {
     width: 92%;
     margin-left: 4%;
     margin-right: 10%;
+    overflow: hidden;
+}
+
+#delete {
+    width: 92%;
+    margin-left: 4%;
+    margin-right: 10%;
+    overflow: hidden;
 }
 
 #searchbar {
     border: 1px solid black;
-    margin-right: 10%;
+    float: left;
+    width: 40%;
+    height: 50px;
 }
 
-#searchbutton {
+#addticker {
+    border: 1px solid black;
+    float: left;
     width: 5%;
+    border-left: none;
+    height: 50px;
+}
+
+#deletebar {
+    border: 1px solid black;
+    float: left;
+    width: 40%;
+    height: 50px;
+    margin-left: 7%;
+}
+
+#deleteticker {
+    border: 1px solid black;
+    float: right;
+    width: 5%;
+    border-left: none;
+    height: 50px;
+    margin-right: 3%;
 }
 
 ::placeholder{
     color:  #38688a;
     font-size: 125%;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 #tickandsent {
-    margin-top: 2%;
+    margin-top: 1%;
+    padding-top: 2.5%;
+    border-top: 2px solid black;
 }
 
 #tickandsent > div {
-    height: 400px;
-    border: 1px solid black;
+    height: 100%;
+    border: 2px solid black;
 }
 
 #tickers {
@@ -80,30 +119,38 @@ input, button {
     width: 44%;
     background-color: white;
     margin-left: 4%;
-    overflow: auto;
-}
-
-.ticker {
-    background-color: gray !important;
-    position: absolute;
 }
 
 #sentiment{
     float: right;
     width: 44%;
-    background-color: white;
+    background-color: #e7e7e7;
     margin-right: 4%;
 }
 
 meter {
     width: 90%;
     margin-left: 5%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 17px;
+    margin-bottom: 35px;
 }
 
-#meter {
+.meter {
     border-bottom: 1px solid black;
-    height: 70px;
-    background-color: black;
+    height: 52px;
+    margin-top: 18px;
+    border-top: 1px solid black;
+    background-color: white;
+}
+
+.tick {
+    text-transform: uppercase;
+    background-color: #e7e7e7;
+    color: black;
+    padding: 15px 0;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding-left: 5px;
+    text-align: center;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
