--- a/loginStyle.css
+++ b/loginStyle.css
@@ -152,10 +152,11 @@ meter {
     text-transform: uppercase;
     background-color: #e7e7e7;
     color: black;
-    padding: 15px 0;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-    padding-left: 5px;
+    width: 98%;
+    margin-left: 1%;
+    margin-top: 18px;
+    border: 1px solid black;
+    height: 52px;
     text-align: center;
     font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
