--- a/loginStyle.css
+++ b/loginStyle.css
@@ -163,3 +163,7 @@ meter {
     text-align: center;
     font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
+
+.active {
+    background-color: lightgreen;
+}
