--- a/loginStyle.css
+++ b/loginStyle.css
@@ -16,6 +16,7 @@ body {
 h1{
     float: left;
     margin-top: 35px;
+    margin-left: 50px;
 }
 
 #user_div {
@@ -51,6 +52,8 @@ p {
     width: 10%;
     float: right;
     margin-top: 30px;
+    margin-right: 50px;
+    border: 1px solid black;
 }
 
 .mainLoginDiv button:hover {
