--- a/loginStyle.css
+++ b/loginStyle.css
@@ -7,6 +7,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-size:18px;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 #welcome {
@@ -21,6 +22,11 @@ h1{
 
 #user_div {
     max-height: 95%;
+}
+
+h2{
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    text-align: center;
 }
 
 button {
