--- a/loginStyle.css
+++ b/loginStyle.css
@@ -1,6 +1,3 @@
-html{
-    overflow-y: scroll;
-}
 
 body {
     background: #7BAFD4;
@@ -12,6 +9,7 @@ body {
 
 #welcome {
     overflow: hidden;
+    border-bottom: 2px solid black;
 }
 
 h1{
@@ -37,10 +35,12 @@ p {
     text-align: center;
 }
 
+h4{
+    text-align: center;
+}
+
 #desc {
-    background-color: white;
-    position: fixed;
-    bottom: 0;
+    background-color: e7e7e7;
     padding: 3px;
     border: 1px solid black;
 }
@@ -88,7 +88,16 @@ input, button {
 #main {
     margin-top: 1%;
     padding-top: 2.5%;
-    border-top: 2px solid black;
+    border-top: 8px solid black;
+}
+
+#descdiv {
+    margin-bottom: 40px;
+}
+
+#desc {
+    margin-left: 4%;
+    margin-right: 4%;
 }
 
 #search {
